tests/logs/test_failures.txt
..F...F.F..F...FF.......                                                 [100%]
================================== FAILURES ===================================
E     File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\app\services\status_manager.py", line 350
        <<<<<<< HEAD
        ^^
    SyntaxError: invalid syntax
------------------------------ Captured log call ------------------------------
ERROR    app.server:server.py:160 Global Exception: invalid syntax (status_manager.py, line 350)
Traceback (most recent call last):
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\middleware\errors.py", line 164, in __call__
    await self.app(scope, receive, _send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\middleware\cors.py", line 85, in __call__
    await self.app(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\middleware\exceptions.py", line 63, in __call__
    await wrap_app_handling_exceptions(self.app, conn)(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\_exception_handler.py", line 53, in wrapped_app
    raise exc
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\_exception_handler.py", line 42, in wrapped_app
    await app(scope, receive, sender)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\fastapi\middleware\asyncexitstack.py", line 18, in __call__
    await self.app(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\routing.py", line 716, in __call__
    await self.middleware_stack(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\routing.py", line 736, in app
    await route.handle(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\routing.py", line 290, in handle
    await self.app(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\fastapi\routing.py", line 115, in app
    await wrap_app_handling_exceptions(app, request)(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\_exception_handler.py", line 53, in wrapped_app
    raise exc
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\_exception_handler.py", line 42, in wrapped_app
    await app(scope, receive, sender)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\fastapi\routing.py", line 101, in app
    response = await f(request)
               ^^^^^^^^^^^^^^^^
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\fastapi\routing.py", line 355, in app
    raw_response = await run_endpoint_function(
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\fastapi\routing.py", line 243, in run_endpoint_function
    return await dependant.call(**values)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\app\routers\interview.py", line 111, in access_interview
    from ..services.status_manager import record_status_change
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\app\services\status_manager.py", line 350
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\app\routers\interview.py:111:   File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\app\services\status_manager.py", line 350
E   AssertionError: assert InterviewSession(start_time=None, id=1, is_suspended=False, admin_id=1, suspension_reason=None, end_time=None, status=...ning_count=0, duration_minutes=60, max_questions=None, max_warnings=3, access_token='1ef4173d0b174974a05e56d1deef84ab') is None
C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\tests\unit\test_cascade_delete.py:136: AssertionError: assert InterviewSession(start_time=None, id=1, is_suspended=False, admin_id=1, suspension_reason=None, end_time=None, status=...ning_count=0, duration_minutes=60, max_questions=None, max_warnings=3, access_token='1ef4173d0b174974a05e56d1deef84ab') is None
E   KeyError: 'detail'
C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\tests\unit\test_cascade_delete.py:154: KeyError: 'detail'
E   AssertionError: Expected 'build_model' to be called once. Called 0 times.
C:\Users\Sameer\AppData\Local\Programs\Python\Python311\Lib\unittest\mock.py:950: AssertionError: Expected 'build_model' to be called once. Called 0 times.
E     File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\app\services\status_manager.py", line 350
        <<<<<<< HEAD
        ^^
    SyntaxError: invalid syntax
------------------------------ Captured log call ------------------------------
ERROR    app.server:server.py:160 Global Exception: invalid syntax (status_manager.py, line 350)
Traceback (most recent call last):
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\middleware\errors.py", line 164, in __call__
    await self.app(scope, receive, _send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\middleware\cors.py", line 85, in __call__
    await self.app(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\middleware\exceptions.py", line 63, in __call__
    await wrap_app_handling_exceptions(self.app, conn)(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\_exception_handler.py", line 53, in wrapped_app
    raise exc
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\_exception_handler.py", line 42, in wrapped_app
    await app(scope, receive, sender)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\fastapi\middleware\asyncexitstack.py", line 18, in __call__
    await self.app(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\routing.py", line 716, in __call__
    await self.middleware_stack(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\routing.py", line 736, in app
    await route.handle(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\routing.py", line 290, in handle
    await self.app(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\fastapi\routing.py", line 115, in app
    await wrap_app_handling_exceptions(app, request)(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\_exception_handler.py", line 53, in wrapped_app
    raise exc
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\_exception_handler.py", line 42, in wrapped_app
    await app(scope, receive, sender)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\fastapi\routing.py", line 101, in app
    response = await f(request)
               ^^^^^^^^^^^^^^^^
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\fastapi\routing.py", line 355, in app
    raw_response = await run_endpoint_function(
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\fastapi\routing.py", line 243, in run_endpoint_function
    return await dependant.call(**values)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\app\routers\interview.py", line 111, in access_interview
    from ..services.status_manager import record_status_change
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\app\services\status_manager.py", line 350
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\app\routers\interview.py:111:   File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\app\services\status_manager.py", line 350
E     File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\app\services\status_manager.py", line 350
        <<<<<<< HEAD
        ^^
    SyntaxError: invalid syntax
------------------------------ Captured log call ------------------------------
ERROR    app.server:server.py:160 Global Exception: invalid syntax (status_manager.py, line 350)
Traceback (most recent call last):
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\middleware\errors.py", line 164, in __call__
    await self.app(scope, receive, _send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\middleware\cors.py", line 85, in __call__
    await self.app(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\middleware\exceptions.py", line 63, in __call__
    await wrap_app_handling_exceptions(self.app, conn)(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\_exception_handler.py", line 53, in wrapped_app
    raise exc
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\_exception_handler.py", line 42, in wrapped_app
    await app(scope, receive, sender)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\fastapi\middleware\asyncexitstack.py", line 18, in __call__
    await self.app(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\routing.py", line 716, in __call__
    await self.middleware_stack(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\routing.py", line 736, in app
    await route.handle(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\routing.py", line 290, in handle
    await self.app(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\fastapi\routing.py", line 115, in app
    await wrap_app_handling_exceptions(app, request)(scope, receive, send)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\_exception_handler.py", line 53, in wrapped_app
    raise exc
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\starlette\_exception_handler.py", line 42, in wrapped_app
    await app(scope, receive, sender)
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\fastapi\routing.py", line 101, in app
    response = await f(request)
               ^^^^^^^^^^^^^^^^
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\fastapi\routing.py", line 355, in app
    raw_response = await run_endpoint_function(
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\.venv\Lib\site-packages\fastapi\routing.py", line 243, in run_endpoint_function
    return await dependant.call(**values)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\app\routers\interview.py", line 152, in start_session_logic
    from ..services.status_manager import record_status_change
  File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\app\services\status_manager.py", line 350
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\app\routers\interview.py:152:   File "C:\Users\Sameer\OneDrive\Desktop\AI_Interview_Backend\app\services\status_manager.py", line 350
=========================== short test summary info ===========================
FAILED tests/integration/test_flow.py::test_full_interview_lifecycle -   File...
FAILED tests/unit/test_cascade_delete.py::TestCascadeDelete::test_delete_candidate_cascades_interviews
FAILED tests/unit/test_cascade_delete.py::TestCascadeDelete::test_cannot_delete_self
FAILED tests/unit/test_cloud_robustness.py::test_face_recognizer_builds_sface_even_on_cloud
FAILED tests/unit/test_interview.py::test_access_interview_valid -   File "C:...
FAILED tests/unit/test_interview.py::test_start_session -   File "C:\Users\Sa...
6 failed, 18 passed in 2.96s
